# SaaS_Project_SecurityMirror

./: .gitignore  Copilot History.xlsx  README.md  customers_fixture.json  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_workers.sh
.github/workflows/: ci.yml  debug-secret.yml  mirror.yml  test-secret.yml  tests.yml  usage-alert.yml
Archives/: Old_test_platform_invoice_rbac_permissions.py  Old_test_tenant_invoice_rbac_permissions.py
Working Scripts/: Cleaned‑Up All‑in‑One Script.sql  Minimal RBAC Validation Script.sql  Unified RBAC Test Script with Validation_Expected-vs-Actual.sql  Unified RBAC Validation Script.sql
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
saas_app/: ]  __init__.py  api_urls.py  asgi.py  celery.py  check_fixture.py  cleanup_archives.ps1  convert_logs.py  core_fixture.json  daily_summary.txt  dump.json  generate_summary.ps1  health_check.py  health_check_config.json  old_new_settings.py  old_urls.py  package-lock.json  requirements.txt  run_logs_and_health.bat  send_email.ps1  settings.json  settings.py  setup_healthcheck.ps1  setup_log.txt  tenant_summary.csv  tenant_summary_20260118_003253.csv  tenant_summary_20260118_004125.csv  tenant_summary_20260118_004156.csv  tenant_summary_20260118_004319.csv  tenant_summary_20260118_004523.csv  tenant_summary_20260118_004542.json  tenant_summary_20260118_004631.csv  tenant_summary_20260118_004825.csv  urls.py
saas_app/audit/: apps.py  (+2 more)
tests/: conftest.py  test_invoices.py  test_smoke.py  test_tenants.py  test_users.py
(+336 files in other folders)
